# thapo-ska

./: .dockerignore  .gitignore  Cargo.toml  README.md  justfile  pyproject.toml  run_cli.sh  rust-toolchain.toml  ska_frontend.code-workspace
backend/: .env.dev  .env.local  .env.local_docker  Cargo.toml  serve.sh
backend/src/: lib.rs
backend/src/modules/: mod.rs
backend/src/modules/db/: db.rs
backend/src/modules/global_state/: env_config.rs  global_state.rs  mod.rs
backend/src/server/: mod.rs  server.rs
backend/src/server/route_api/: mod.rs
backend/src/server/route_api/route_assistant/: route_assistant.rs
backend/src/server/route_api/route_assistant/route_ask_assistant_question/: mod.rs
devops/docker/: .env.dev  .env.local  .env.local_docker  .env.local_kube  .env.prod  docker-compose.yaml
devops/scripts/: ctr-import.sh  docker-build-backend.sh  docker-compose.py  (+1 more)
docs/: specific-knowledge-assistant.odt
frontend/: .env.dev  .env.local  .env.local_docker  .env.local_kube  .env.prod  .env.serve  Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  package-lock.json  package.json  styles.scss  tailwindinput.css
frontend/nginx/: thapo-ska-dev.conf  thapo-ska-local.conf  thapo-ska-local_docker.conf  thapo-ska-prod.conf
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/gui/: app.rs  comp_drawer.rs  comp_footer.rs  comp_header.rs  header_comp.rs  mod.rs
frontend/src/gui/page_assistant/: comp_chat.rs  mod.rs  page_assistant.rs  service_assistant.rs
frontend/src/gui/page_assistant/dtos/: mod.rs
frontend/src/gui/page_assistant/models/: mod.rs
frontend/src/gui/page_home/: page_home.rs
frontend/src/gui/shared/: http_utils.rs  mod.rs  routes.rs
frontend/src/modules/global_state/: env_config.rs  global_state.rs  mod.rs
gateway/: serve.sh
migration/: Cargo.toml
ska_backend/: .env.dev  .env.local  .env.local_docker  .env.local_kube  .env.prod  .secret-example  Cargo.toml  serve.sh
ska_backend/distribution/etc/dev/: .env  skalm_config.json
ska_backend/distribution/etc/local/: .env  llm_config.json  skalm_config.json
ska_backend/distribution/etc/local_docker/: .env
ska_backend/distribution/etc/local_kube/: .env
ska_backend/distribution/etc/prod/: .env
ska_backend/distribution/share/migration/m20240606_000002/down/: down00.sql  down01.sql
ska_backend/distribution/share/migration/m20240606_000002/up/: up00.sql  up01.sql  up02.sql
ska_backend/src/: lib.rs
ska_backend/src/cli/: cli.rs  mod.rs
ska_backend/src/cli/cmd_db/: cmd_db.rs  mod.rs
ska_backend/src/cli/cmd_db/cmd_migrate/: action_migrate.rs  cmd_migrate.rs  mod.rs
ska_backend/src/cli/cmd_model/: cmd_model.rs  mod.rs
ska_backend/src/cli/cmd_model/cmd_create_skalm/: action_create_skalm.rs  cmd_create_skalm.rs  mod.rs
ska_backend/src/cli/cmd_model/cmd_download/: action_download.rs  cmd_download.rs  mod.rs
ska_backend/src/cli/cmd_model/cmd_download_data/: action_download_data.rs  cmd_download_data.rs  mod.rs
ska_backend/src/cli/cmd_model/cmd_insert/: action_insert.rs  cmd_insert.rs  mod.rs
ska_backend/src/cli/cmd_model/cmd_rag_invoke/: action_rag_invoke.rs  cmd_rag_invoke.rs  mod.rs
ska_backend/src/cli/cmd_model/cmd_rag_prepare/: action_rag_prepare.rs  cmd_rag_prepare.rs  mod.rs
ska_backend/src/domain/: mod.rs
ska_backend/src/domain/entities/: chat_message.rs  mod.rs  nn_model.rs  prelude.rs  user_chat.rs  user_chat_message.rs  users.rs
ska_backend/src/domain/nn_model/: invoke_output_dto.rs  mod.rs  nn_model.rs  service_nn_model.rs
ska_backend/src/domain/repos/: mod.rs  repo_chat_message.rs  repo_user_chat.rs  repo_users.rs
ska_backend/src/domain/user/: dto_chat_details.rs  mod.rs  user_enums.rs  validator_chat_message.rs  validator_user_chat.rs
ska_backend/src/modules/: mod.rs
ska_backend/src/modules/auth/: auth_models.rs  dto_user_details.rs  mod.rs  service_auth.rs
ska_backend/src/modules/db/: db.rs
ska_backend/src/modules/error/: dto_error.rs  error.rs  mod.rs
ska_backend/src/modules/global_state/: env_config.rs  global_state.rs  secret_config.rs
ska_backend/src/modules/myfs/: mod.rs  my_paths.rs
ska_backend/src/modules/web/: middleware_auth.rs  mod.rs  routes.rs  utils_web.rs
ska_backend/src/server/: server.rs
ska_backend/src/server/route_api/: mod.rs  route_api.rs
ska_backend/src/server/route_api/route_assistant/: mod.rs  route_assistant.rs
ska_backend/src/server/route_api/route_assistant/route_ask_assistant_question/: action_ask_assistant_question.rs  dto_ask_assistant_question.rs  mod.rs  route_ask_assistant_question.rs
ska_backend/src/server/route_api/route_assistant/route_create_chat/: action_create_chat.rs  dto_chat_details.rs  mod.rs  route_create_chat.rs
ska_backend/src/server/route_api/route_assistant/route_delete_chat/: action_delete_chat.rs  dto_delete_user_chat.rs  mod.rs  route_delete_chat.rs
ska_backend/src/server/route_api/route_assistant/route_fetch_assistant_options/: action_fetch_assistant_options.rs  dto_fetch_assistant_options.rs  mod.rs  route_fetch_assistant_options.rs
ska_backend/src/server/route_api/route_assistant/route_fetch_chat_messages/: action_fetch_chat_messages.rs  dto_fetch_chat_messages.rs  mod.rs  route_fetch_chat_messages.rs
ska_backend/src/server/route_api/route_assistant/route_update_chat/: action_update_chat.rs  mod.rs  route_update_chat.rs
ska_backend/src/server/route_api/route_auth/: mod.rs  route_auth.rs
ska_backend/src/server/route_api/route_auth/route_app_login/: action_app_login.rs  mod.rs  route_app_login.rs
ska_frontend/: .env.dev  .env.local  .env.local_dev  .env.local_docker  .env.local_kube  .env.prod  Cargo.toml  build.rs  index.html  package-lock.json  package.json  serve.sh  tailwind.config.js  vite.config.ts
ska_frontend2/: .env.dev  .env.local_dev  .env.local_docker  .env.local_kube  .env.prod  .eslintrc.cjs  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ska_gateway/: serve.sh
ska_iam/: .secret.example  entrypoint.sh  serve.sh
ska_llm/: lib.py  main.py  main_test.py  skalib.py
ska_migration/: Cargo.toml  run.sh
(+172 files in other folders)
