[workspace]
members = ["ska_backend", "ska_frontend", "ska_migration"]
# default-members = []
resolver = "2"


[workspace.dependencies]
dotenv = "0.15.0"
axum = "0.7.5"
hyper = "1.2.0"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
console_log = "1.0.0"
leptos = "0.6.10"
leptos_router = "0.6.10"
log = "0.4.21"
reqwest = "0.11.27"
serde = "1.0.197"
serde_json = "1.0.115"
wasm-bindgen-test = "0.3.42"
strum = "0.26.2"
strum_macros = "0.26.2"
chrono = "0.4.37"
sea-orm = "0.12.15"
sea-orm-migration = "0.12.15"
async-std = "1.12.0"
oauth2 = "4.4.2"
openidconnect = "3.5.0"
anyhow = "1.0.81"
leptos-use = "0.10.6"
tower = "0.4.13"
tower-http = "0.5.2"
const_format = "0.2.32"
pyo3 = "0.21.2"
clap = "4.5.4"
