[workspace]
members = ["ska_backend", "ska_migration"]
# default-members = []
resolver = "2"


[workspace.dependencies]
dotenvy = "0.15.7"
axum = "0.7.5"
hyper = "1.4.1"
tokio = "1.39.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
console_log = "1.0.0"
log = "0.4.22"
reqwest = "0.11.27"
serde = "1.0.200"
serde_json = "1.0.120"
wasm-bindgen-test = "0.3.42"
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = "0.4.38"
sea-orm = "0.12.15"
sea-orm-migration = "0.12.15"
async-std = "1.12.0"
oauth2 = "4.4.2"
openidconnect = "3.5.0"
anyhow = "1.0.86"
tower = "0.4.13"
tower-http = "0.5.2"
const_format = "0.2.32"
clap = "4.5.11"
