[tool.poetry]
name = "thapo-ska"
version = "0.1.0"
description = ""
authors = ["ThanosApostolou <thanosapostolou@outlook.com>"]
readme = "README.md"
packages = [{ include = "ska_llm" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "~2.2.1"
numpy = "~1.26.4"
matplotlib = "~3.8.3"
langchain = "~0.1.13"
huggingface-hub = "~0.22.1"
transformers = "~4.39.1"
unstructured = { extras = ["csv", "pdf", "image", "md"], version = "~0.13.2" }
sentence-transformers = "~2.7.0"
faiss-cpu = "~1.8.0"
ctransformers = "~0.2.27"
llama-cpp-python = "~0.2.63"
torch = "~2.2.2"
accelerate = "~0.29.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "~2.1.0"
pytest = "~8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
