[package]
name = "backend"
version = "0.1.1"
edition = "2021"
resolver = "2"
default-run = "app-server"

[dependencies]
axum = { version = "0.7.2", optional = true }
hyper = { version = "1.0.1", features = ["full"], optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenv = { workspace = true }

[features]
feature-server = ["dep:axum", "dep:hyper"]
feature-cli = []

[[bin]]
name = "app-server"
required-features = ["feature-server"]

[[bin]]
name = "app-cli"
required-features = ["feature-cli"]
