[package]
name = "frontend"
version = "0.1.1"
edition = "2021"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"

[build-dependencies]
dotenv = { workspace = true }
