[package]
name = "frontend"
version = "0.1.1"
edition = "2021"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { workspace = true }
leptos = { workspace = true, features = ["csr", "nightly"] }
leptos_router = { workspace = true, features = ["csr", "nightly"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
dotenv = { workspace = true }
