[package]
name = "ska_backend"
version = "0.1.1"
edition = "2021"
resolver = "2"
default-run = "app-server"

[dependencies]
migration = { path = "../migration" }
axum = { workspace = true, optional = true }
hyper = { workspace = true, features = ["full"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
reqwest = { workspace = true }

[features]
feature-server = ["dep:axum", "dep:hyper"]
feature-cli = []

[[bin]]
name = "app-server"
required-features = ["feature-server"]

[[bin]]
name = "app-cli"
required-features = ["feature-cli"]
