[package]
name = "ska_backend"
version = "0.1.1"
edition = "2021"
resolver = "2"
default-run = "app-server"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
ska_migration = { path = "../ska_migration" }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dotenv = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
strum = { workspace = true }
strum_macros = { workspace = true }
oauth2 = { workspace = true }
anyhow = { workspace = true }
const_format = { workspace = true }
chrono = { workspace = true }


[[bin]]
name = "app-server"

[[bin]]
name = "app-cli"
